# vermind

./: .gitignore  GQA.ipynb  LICENSE  README.md  README_v.md  README_zh.md  main.py  package-lock.json  package.json  pyproject.toml
data/openwebtext/: prepare.py
data_loader/: __init__.py  dpo_dataset.py  pretrain_dataset.py  rlaif_dataset.py  sft_dataset.py  vlm_dataset.py
docs/: GQA.ipynb  README_en.md  README_llm.md  README_llm_zh.md  README_v.md  README_vlm.md  README_vlm_zh.md  base_module.ipynb  dataloader.ipynb  dpo.ipynb  index.html  problems.md  shell.md  swiglu.ipynb  test.md  test_sft_dataset_packed.ipynb  vermind-omini.html  vermind-v.html  vermind.html
docs/notes/: rope.ipynb
examples/: bench.sh  chinese_benchmark_2026-01-29T15-40-40.825217.json  chinese_benchmark_2026-01-29T16-26-06.497807.json  dpo.sh  dpo_2026-01-29T19-58-43.033079.json  grpo.sh  lora.sh  ppo.sh  pretrain_vlm.sh  pretrain_vlm_from_dpo.sh  reason.sh  sft.sh  sft_packed.sh  sft_packed_test.sh  sft_shot_3.json  sft_test.sh  vlm_sft.sh
examples/benchmark/: dpo.sh  ppo_2026-01-30T10-48-26.261152.json
scripts/: debug_vlm.py  download_dataset.sh  eval_llm.py  eval_vlm.py  eval_vlm_api.py  local_sync.sh  lora.sh  merge_lora.py  pre_sftdatapacked.py  pretrain.sh  pretrain_data_pre.py  self_cognition.py  sft.sh  ssh_sync.sh  tokenizer_data_pre.py  upload_dataset.py  upload_hf.py  upload_model.py  upload_vlm_model.py  web_demo.py
train/: dpo.py  grpo.py  lora.py  ppo.py  pretrain.py  pretrain_vlm.py  reason.py  sft.py  sft_packed.py  train_tokenizer.py  train_vlm.py  utils.py
vermind/: cli.py
vermind/configs/: BaseConfig.py  GPT2Config.py  __init__.py
vermind/models/: GPT2.py  __init__.py
vermind/trainer/: GPT2Traner.py  __init__.py
vermind/utils/: Scaling_Laws.ipynb
vermind_models/: FFN.py  GQA.py  __init__.py  bade_module.py  base_module.py  lora_adpater.py
vermind_models/config/: __init__.py  config.py  config_vlm.py
vermind_models/llama3_mod/: llama3_mod.py
vermind_models/models/: __init__.py  modeling_vermind.py  modeling_vermind_dense.py  modeling_vermind_v.py
vllm_adapter/: README.md  __init__.py  configuration_vermind.py  modeling_vermind.py  plugin.py  register.py  start_server.py  start_server.sh  vermind.py
vllm_adapter/core/: __init__.py  configuration_vermind.py  modeling_vermind.py  register.py  vermind.py
vllm_adapter/vlm/: __init__.py  configuration_vermind_v.py  modeling_vermind_v.py  vermind_v.py
