[project]
name = "vermind"
version = "0.1.0"
description = "vermind, learn llm by coding (my record)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "swanlab>=0.7.4",
    "torch==2.8.0",
    "torchaudio>=2.8.0",
    "torchvision>=0.23.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

# -------------------------------
# tool.ruff - lint & format
# -------------------------------
[tool.ruff]
line-length = 100

[tool.ruff.lint]
# 个人项目：先抓明显错误 + import 顺序
select = [
    "E",  # pycodestyle (格式、缩进等)
    "F",  # pyflakes (未使用变量、未导入等)
    "I",  # import 排序
]

# 行太长先不管，写代码更顺手
ignore = ["E501"]

[dependency-groups]
dev = [
    "ruff>=0.14.9",
]
