[project]
name = "vermind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.5.0",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "modelscope>=1.34.0",
    "swanlab>=0.7.6",
    "torch==2.8.0",
    "transformers>=4.57.6",
    "vllm>=0.11.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["data_loader", "vermind_models", "vllm_adapter"]

[project.entry-points."vllm.general_plugins"]
vermind = "vllm_adapter.plugin:register_vermind_plugin"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "F",      # Pyflakes
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "F401",   # unused imports
    "F811",   # redefined imports
]

ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["vermind_models", "data_loader"]
